src/objects/Competition__c.object
<CustomObject>
    <description>This object will hold information about all the other competitor products that account was using earlier.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&quot;https://na5.salesforce.com/&quot; &amp; Direct_Onboarding__r.Account_Name__c,Direct_Onboarding__r.Account_Name__r.Name)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Product_Text__c</fullName>
        <description>To be used to manually add text if the product does not exist.</description>
        <label>Comp Product Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Percentage_Used__c</fullName>
        <label>Competitor % Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <label>Competitor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Products__c</referenceTo>
        <relationshipLabel>Competitions</relationshipLabel>
        <relationshipName>Competitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex(Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburgh/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Onboarding__c</fullName>
        <label>Direct Onboarding</label>
        <referenceTo>Direct_Onboarding__c</referenceTo>
        <relationshipLabel>Competitive Information</relationshipLabel>
        <relationshipName>Competitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Off_Zone__c</fullName>
        <label>Off Zone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitions</relationshipLabel>
        <relationshipName>Competitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Est_Volume__c</fullName>
        <label>Recommended Est Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Sheen__c</fullName>
        <label>Recommended Sheen</label>
        <picklist>
            <picklistValues>
                <fullName>High Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flatte/Matte</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Zone_Price__c</fullName>
        <formula>IF(  Off_Zone__c &lt;&gt;0,Off_Zone__c, If(ISPICKVAL(Recommended_Zone__c, &quot;1&quot;), Product__r.Zone1__c , IF( ISPICKVAL(Recommended_Zone__c, &quot;2&quot;), Product__r.Zone2__c,IF( ISPICKVAL(Recommended_Zone__c, &quot;3&quot;), Product__r.Zone3__c,IF( ISPICKVAL(Recommended_Zone__c, &quot;4&quot;), Product__r.Zone4__c,IF( ISPICKVAL(Recommended_Zone__c, &quot;5&quot;), Product__r.Zone5__c, IF( ISPICKVAL(Recommended_Zone__c, &quot;6&quot;), Product__r.Zone6__c,IF( ISPICKVAL(Recommended_Zone__c, &quot;7&quot;), Product__r.Zone7__c,0 ))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Zone Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recommended_Zone__c</fullName>
        <label>Approved Zone</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off zone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Date__c</fullName>
        <label>Source Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Information__c</fullName>
        <label>Source Information</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competition</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>